--- a/App.config
+++ b/App.config
@@ -1,6 +1,19 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+        <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="Karaoke_PopRock.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+        </sectionGroup>
+    </configSections>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
+    <applicationSettings>
+        <Karaoke_PopRock.Properties.Settings>
+            <setting name="Db_karaoke_poprockConnectionString" serializeAs="String">
+                <value>Data Source=.\SQLEXPRESS;Initial Catalog=KaraokeDB;User ID=Anggita;Password=Anggita
+</value>
+            </setting>
+        </Karaoke_PopRock.Properties.Settings>
+    </applicationSettings>
 </configuration>
